flutter_app/lib/ffi/atarist_bindings.dart

// dart:ffi bindings for libatarist_core.
//
// Hand-written rather than generated by ffigen, for the same reason the
// sibling apps are: the bridge header is small and stable by design, and a
// generated binding would drag in Hatari's headers -- thousands of symbols
// none of which may cross this line. Keep in step with
// native/atarist_core/bridge/atarist_bridge.h; the ABI check in [load] is
// what catches drift at runtime.
import 'dart:ffi';
import 'dart:io';
import 'dart:typed_data';

import 'package:ffi/ffi.dart';

import 'atarist_core.dart';

/// Mirrors AtariStConfig in atarist_bridge.h, field for field and in order.
///
/// Field ORDER is the ABI here, not the names -- a reordering compiles
/// cleanly on both sides and then boots the wrong machine off a path
/// interpreted as an integer. Any change to the C struct must be made here in
/// the same commit.
final class _NativeConfig extends Struct {
  @Int32()
  external int machine;

  @Int32()
  external int memoryKb;

  external Pointer<Utf8> tosPath;
  external Pointer<Utf8> floppyA;
  external Pointer<Utf8> floppyB;
  external Pointer<Utf8> gemdosDir;
  external Pointer<Utf8> acsiImage;
  external Pointer<Utf8> ideImage;

  @Int32()
  external int blitter;

  @Int32()
  external int accurateFloppy;

  @Int32()
  external int sampleRate;

  @Int32()
  external int stereo;

  @Int32()
  external int monitor;

  @Int32()
  external int joystickPort1;

  external Pointer<Utf8> workDir;
}

typedef _InitNative = Void Function(Pointer<Utf8>, Pointer<Utf8>);
typedef _InitDart = void Function(Pointer<Utf8>, Pointer<Utf8>);

typedef _StartNative = Int32 Function(Pointer<_NativeConfig>);
typedef _StartDart = int Function(Pointer<_NativeConfig>);

typedef _VoidIntNative = Int32 Function();
typedef _VoidIntDart = int Function();

typedef _SetPausedNative = Void Function(Int32);
typedef _SetPausedDart = void Function(int);

typedef _ResetNative = Int32 Function(Int32);
typedef _ResetDart = int Function(int);

typedef _SetFloppyNative = Int32 Function(Int32, Pointer<Utf8>);
typedef _SetFloppyDart = int Function(int, Pointer<Utf8>);

typedef _GetFloppyNative = Pointer<Utf8> Function(Int32);
typedef _GetFloppyDart = Pointer<Utf8> Function(int);

typedef _GetFbNative = Pointer<Uint32> Function(
    Pointer<Int32>, Pointer<Int32>, Pointer<Int32>);
typedef _GetFbDart = Pointer<Uint32> Function(
    Pointer<Int32>, Pointer<Int32>, Pointer<Int32>);

typedef _FrameCounterNative = Int64 Function();
typedef _FrameCounterDart = int Function();

typedef _PixelAspectNative = Double Function();
typedef _PixelAspectDart = double Function();

typedef _KeyEventNative = Void Function(Int32, Int32);
typedef _KeyEventDart = void Function(int, int);

typedef _MouseMotionNative = Void Function(Int32, Int32);
typedef _MouseMotionDart = void Function(int, int);

typedef _JoystickNative = Void Function(Int32, Int32);
typedef _JoystickDart = void Function(int, int);

typedef _SlotNative = Int32 Function(Int32);
typedef _SlotDart = int Function(int);

typedef _PathIntNative = Int32 Function(Pointer<Utf8>);
typedef _PathIntDart = int Function(Pointer<Utf8>);

typedef _StringNative = Pointer<Utf8> Function();
typedef _StringDart = Pointer<Utf8> Function();

class AtariStCoreBindings implements AtariStCore {
  final _InitDart _init;
  final _StartDart _start;
  final _VoidIntDart _stop;
  final _VoidIntDart _isRunning;
  final _SetPausedDart _setPaused;
  final _VoidIntDart _isPaused;
  final _ResetDart _reset;
  final _SetFloppyDart _setFloppy;
  final _GetFloppyDart _getFloppy;
  final _GetFbDart _getFramebuffer;
  final _FrameCounterDart _frameCounter;
  final _PixelAspectDart _pixelAspect;
  final _KeyEventDart _keyEvent;
  final _MouseMotionDart _mouseMotion;
  final _KeyEventDart _mouseButton;
  final _JoystickDart _joystick;
  final _SlotDart _saveState;
  final _SlotDart _loadState;
  final _SlotDart _stateIsEmpty;
  final _PathIntDart _saveStateTo;
  final _PathIntDart _loadStateFrom;
  final _VoidIntDart _fps;
  final _VoidIntDart _audioLevel;
  final _StringDart _statusLine;
  final _StringDart _lastError;
  final _StringDart _hatariVersion;
  final _StringDart _audioBackend;

  /// Scratch space for the framebuffer query, allocated once.
  ///
  /// Three out-parameters are needed on every frame, and at 50 frames a
  /// second a malloc/free pair per parameter per frame is 450 allocations a
  /// second for three integers that never change size.
  final Pointer<Int32> _fbW = calloc<Int32>();
  final Pointer<Int32> _fbH = calloc<Int32>();
  final Pointer<Int32> _fbPitch = calloc<Int32>();

  bool _pausedByUi = false;

  AtariStCoreBindings._(DynamicLibrary lib)
      : _init = lib.lookupFunction<_InitNative, _InitDart>('atarist_core_init'),
        _start =
            lib.lookupFunction<_StartNative, _StartDart>('atarist_core_start'),
        _stop = lib
            .lookupFunction<_VoidIntNative, _VoidIntDart>('atarist_core_stop'),
        _isRunning = lib.lookupFunction<_VoidIntNative, _VoidIntDart>(
            'atarist_core_is_running'),
        _setPaused = lib.lookupFunction<_SetPausedNative, _SetPausedDart>(
            'atarist_core_set_paused'),
        _isPaused = lib.lookupFunction<_VoidIntNative, _VoidIntDart>(
            'atarist_core_is_paused'),
        _reset =
            lib.lookupFunction<_ResetNative, _ResetDart>('atarist_core_reset'),
        _setFloppy = lib.lookupFunction<_SetFloppyNative, _SetFloppyDart>(
            'atarist_core_set_floppy'),
        _getFloppy = lib.lookupFunction<_GetFloppyNative, _GetFloppyDart>(
            'atarist_core_get_floppy'),
        _getFramebuffer = lib.lookupFunction<_GetFbNative, _GetFbDart>(
            'atarist_core_get_framebuffer'),
        _frameCounter =
            lib.lookupFunction<_FrameCounterNative, _FrameCounterDart>(
                'atarist_core_frame_counter'),
        _pixelAspect =
            lib.lookupFunction<_PixelAspectNative, _PixelAspectDart>(
                'atarist_core_pixel_aspect'),
        _keyEvent = lib.lookupFunction<_KeyEventNative, _KeyEventDart>(
            'atarist_core_key_event'),
        _mouseMotion =
            lib.lookupFunction<_MouseMotionNative, _MouseMotionDart>(
                'atarist_core_mouse_motion'),
        _mouseButton = lib.lookupFunction<_KeyEventNative, _KeyEventDart>(
            'atarist_core_mouse_button'),
        _joystick = lib.lookupFunction<_JoystickNative, _JoystickDart>(
            'atarist_core_joystick'),
        _saveState = lib.lookupFunction<_SlotNative, _SlotDart>(
            'atarist_core_save_state'),
        _loadState = lib.lookupFunction<_SlotNative, _SlotDart>(
            'atarist_core_load_state'),
        _stateIsEmpty = lib.lookupFunction<_SlotNative, _SlotDart>(
            'atarist_core_state_is_empty'),
        _saveStateTo = lib.lookupFunction<_PathIntNative, _PathIntDart>(
            'atarist_core_save_state_to'),
        _loadStateFrom = lib.lookupFunction<_PathIntNative, _PathIntDart>(
            'atarist_core_load_state_from'),
        _fps =
            lib.lookupFunction<_VoidIntNative, _VoidIntDart>('atarist_core_fps'),
        _audioLevel = lib.lookupFunction<_VoidIntNative, _VoidIntDart>(
            'atarist_core_audio_level'),
        _statusLine = lib.lookupFunction<_StringNative, _StringDart>(
            'atarist_core_status_line'),
        _lastError = lib.lookupFunction<_StringNative, _StringDart>(
            'atarist_core_last_error'),
        _hatariVersion = lib.lookupFunction<_StringNative, _StringDart>(
            'atarist_core_hatari_version'),
        _audioBackend = lib.lookupFunction<_StringNative, _StringDart>(
            'atarist_core_audio_backend');

  /// The bridge ABI this Dart code was written against. Bumped in
  /// atarist_bridge.h whenever the C surface changes shape.
  static const int expectedAbi = 1;

  /// Opens the native library and verifies its ABI.
  ///
  /// Throws if the library is absent, if a symbol is missing, or if the ABI
  /// does not match. All three are the same situation in practice -- a build
  /// that did not happen, or a stale .so from a previous one -- and the
  /// caller's response to all three is to fall back to the stub and say so.
  ///
  /// The ABI check is the one that earns its keep: a stale library loads and
  /// binds perfectly and then misreads a struct, which presents as an
  /// emulator that boots the wrong machine rather than as a build problem.
  factory AtariStCoreBindings.load({String? libraryPath}) {
    final DynamicLibrary lib;
    if (Platform.isIOS) {
      // Linked into the app binary, so its symbols are already in the
      // process namespace and there is nothing to open by path.
      lib = libraryPath == null
          ? DynamicLibrary.process()
          : DynamicLibrary.open(libraryPath);
    } else if (libraryPath != null) {
      lib = DynamicLibrary.open(libraryPath);
    } else {
      // Android: the OS loader resolves this out of jniLibs/<abi>/.
      lib = DynamicLibrary.open('libatarist_core.so');
    }

    final abi = lib.lookupFunction<_VoidIntNative, _VoidIntDart>(
        'atarist_core_abi_version')();
    if (abi != expectedAbi) {
      throw StateError(
        'libatarist_core reports ABI $abi but this build expects '
        '$expectedAbi. The native library is stale -- rebuild it with '
        'native/atarist_core/linux/build.sh (or the android/ios script).',
      );
    }
    return AtariStCoreBindings._(lib);
  }

  @override
  void init(String workDir, String tosDir) {
    final w = workDir.toNativeUtf8();
    final t = tosDir.toNativeUtf8();
    try {
      _init(w, t);
    } finally {
      calloc.free(w);
      calloc.free(t);
    }
  }

  @override
  int start(StMachineConfig config) {
    final cfg = calloc<_NativeConfig>();
    // Collected so every one is freed even if an allocation midway throws.
    // The native side copies each path before returning, so freeing here is
    // correct and necessary -- these would otherwise leak once per launch.
    final strings = <Pointer<Utf8>>[];

    Pointer<Utf8> str(String? value) {
      if (value == null || value.isEmpty) return nullptr;
      final p = value.toNativeUtf8();
      strings.add(p);
      return p;
    }

    try {
      cfg.ref
        ..machine = config.machine.index
        ..memoryKb = config.memoryKb ?? 0
        ..tosPath = str(config.tosPath)
        ..floppyA = str(config.floppyA)
        ..floppyB = str(config.floppyB)
        ..gemdosDir = str(config.gemdosDir)
        ..acsiImage = str(config.acsiImage)
        ..ideImage = str(config.ideImage)
        ..blitter = config.blitter ? 1 : 0
        ..accurateFloppy = config.accurateFloppy ? 1 : 0
        ..sampleRate = config.sampleRate
        ..stereo = config.stereo ? 1 : 0
        ..monitor = config.monitor.index
        ..joystickPort1 = config.joystickPort1 ? 1 : 0
        // Left null on purpose: the work directory was fixed once by
        // init() and must not change between launches, or a save state
        // written before a title switch would become unreachable.
        ..workDir = nullptr;
      return _start(cfg);
    } finally {
      for (final p in strings) {
        calloc.free(p);
      }
      calloc.free(cfg);
    }
  }

  @override
  int stop() => _stop();

  @override
  bool get isRunning => _isRunning() != 0;

  @override
  bool get isPaused => _pausedByUi || _isPaused() != 0;

  @override
  void setPaused(bool paused) {
    _pausedByUi = paused;
    _setPaused(paused ? 1 : 0);
  }

  @override
  int reset({bool cold = true}) => _reset(cold ? 1 : 0);

  @override
  int setFloppy(int drive, String? path) {
    if (path == null || path.isEmpty) return _setFloppy(drive, nullptr);
    final p = path.toNativeUtf8();
    try {
      return _setFloppy(drive, p);
    } finally {
      calloc.free(p);
    }
  }
